@@ -8,6 +8,10 @@ Silva changes
     Bug fixes
 
      - update URL_PATTERN to support the entire range of characters supporting in the LHS of email addresses in mailto: links
+     
+     - unpublished Versions of VersionedContent objects were not unindexed from 
+       the catalog when the Version was removed (e.g. via the status tab).
+       A subscriber was added for the IObjectWillBeRemoved event
 
   Silva 2.1.9 (2009-11-26)
     
